# AGL_QT_CLUSTER

./: .gitreview  CMakeLists.txt  LICENSE  README.md
Application/: main.cpp
Assets/Common/: 3DModelData.qrc  3DModelTexture.qrc  Fonts.qrc  Images.qrc  Shaders.qrc
Assets/Common/Images/ADASView/ACC/: 3D_parts_mask.ktx
Assets/Common/Images/ADASView/MAP/: acc_cover.ktx  map_mask.ktx
Assets/Common/Shaders/frag/: RefCubeMapTex_RGBChange_DistDark_Qt.frag  RefTexRefColorFactor_Qt.frag  guageMask.frag
Assets/Common/Shaders/vert/: RefTransCubeMapReflection_DistDark_Qt.vert  RefTrans_Qt.vert  guageMask.vert
GUIModel/: GUIModel.qrc  main.qml
GUIModel/ACC/: ACC_Animation.qml  Material_ColorFactor.qml  Material_ColorFactor_Tbt.qml  Material_ColorFactor_noAlpha.qml  Stage.qml  Transform_NextGen.qml
GUIModel/CruisingRange/: CruisingRange.qml
GUIModel/FPSItem/: FpsItem.qml
GUIModel/Header/: Clock.qml  Header.qml  OutsideTemperature.qml
GUIModel/Map/: Map.qml
GUIModel/Menu/: Menu.qml  MenuAdas.qml  MenuAdasIconAdas.qml  MenuAdasIconNormal.qml  MenuAudio.qml  MenuAudioPanel.qml  MenuContents.qml  MenuFrame.qml  MenuFrameScrollTo0.qml  MenuFrameScrollTo1.qml  MenuFrameScrollTo2.qml  MenuFrameScrollTo3.qml  MenuFrameScrollTo4.qml  MenuMain.qml  MenuRadio.qml  MenuRadioPanel.qml  MenuShade.qml
GUIModel/Meter/: ChargeGuage.qml  DigitalSpeed.qml  Mask.qml  Meter.qml  Ready.qml  Ring.qml  Sideline.qml  SpeedGuage.qml  SpeedNeedle.qml  Tachometer.qml
GUIModel/ShiftPosition/: ShiftPosition.qml
GUIModel/Telltale/: Telltale.qml
GUIModel/TurnByTurn/: TurnByTurn.qml
(+21 files in other folders)
